unpackaged/main/default/objects/CS_Plant_Setting__mdt/CS_Plant_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Stores information on the different Plants that process Order Claims</description>
    <label>CS Plant Setting</label>
    <pluralLabel>CS Plant Settings</pluralLabel>
</CustomObject>