unpackaged/main/default/objects/CS_Plant_Setting__mdt/fields/External_Third_Party_Plant__c.field-meta.xml
<CustomField>
    <fullName>External_Third_Party_Plant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Third Party Plant</label>
    <type>Checkbox</type>
</CustomField>