unpackaged/main/default/objects/CS_Plant_Setting__mdt/fields/isInternational__c.field-meta.xml
<CustomField>
    <fullName>isInternational__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to true for international plants</description>
    <label>isInternational</label>
    <type>Checkbox</type>
</CustomField>