unpackaged/main/default/objects/CS_Plant_Setting__mdt/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCU-TEC</fullName>
            </value>
            <value>
                <fullName>ADL</fullName>
            </value>
            <value>
                <fullName>Alepat Taylor</fullName>
            </value>
            <value>
                <fullName>Australia Bedfords</fullName>
            </value>
            <value>
                <fullName>Australia CCA</fullName>
            </value>
            <value>
                <fullName>Australia Pendulum</fullName>
            </value>
            <value>
                <fullName>Behror</fullName>
            </value>
            <value>
                <fullName>Blue Ocean</fullName>
            </value>
            <value>
                <fullName>BSUK-Springburn</fullName>
            </value>
            <value>
                <fullName>Burlington</fullName>
            </value>
            <value>
                <fullName>Carolina Beer</fullName>
            </value>
            <value>
                <fullName>Clermont</fullName>
            </value>
            <value>
                <fullName>Cooleys</fullName>
            </value>
            <value>
                <fullName>Corporate Quality</fullName>
            </value>
            <value>
                <fullName>Cott - Mexico</fullName>
            </value>
            <value>
                <fullName>Cott - Mississauga</fullName>
            </value>
            <value>
                <fullName>Cott - Viscount</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>DHL Macrocentro (BSI Mexico)</fullName>
                <isActive>false</isActive>
                <label>DHL Macrocentro (BSI Mexico)</label>
            </value>
            <value>
                <fullName>DIS</fullName>
            </value>
            <value>
                <fullName>Dominion</fullName>
            </value>
            <value>
                <fullName>El Tesoro</fullName>
            </value>
            <value>
                <fullName>Frankfort</fullName>
                <isActive>false</isActive>
                <label>Frankfort</label>
            </value>
            <value>
                <fullName>Frankfort-DHL</fullName>
            </value>
            <value>
                <fullName>Fundador</fullName>
            </value>
            <value>
                <fullName>Germany BSI</fullName>
            </value>
            <value>
                <fullName>Glenturner</fullName>
            </value>
            <value>
                <fullName>Glen Turner</fullName>
                <isActive>false</isActive>
                <label>Glen Turner</label>
            </value>
            <value>
                <fullName>Hooghoudt</fullName>
            </value>
            <value>
                <fullName>Jarnac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>